--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les Maux</title>
 </head>
-<body>
+<body class="bg-slate-500">
+ 
+<!-- HEARDER  -->
+
+<header class="bg-black shadow p-5 md:flex md:items-center md:justify-between">
+    <img class="h-7 inline" src="assets/Design_sem_nome-removebg-preview.png" alt="">
     
-    <h1>Primeiro projeto</h1>
+    <nav>
+        <ul class="md:flex md:items-center">
+            <li class="text-white mx-4">
+                <a class="mx-4 text-1 hover:text-blue-500 duration-500" href="#">MASCUILINO</a>
+                <a class="mx-4 text-1 hover:text-white duration-500" href="#">FEMININO</a>
+                <a class="mx-4 text-1 hover:text-red-500 duration-500" href="#">ESPECIAIS</a>
+            </li>
+
+            <button class="bg-white px-5 py-1 rounded-lg mx-4">LOGIN</button>
+            <button class="bg-white px-5 py-1 rounded-lg mx-4">CADASTRAR</button>
+        </ul>    
+    </nav>
+</header>
+
+<!-- HEARDER  -->
 
 </body>
 </html>
